# AD-multi-agent

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_RELEASE_CHECKLIST.md  README.md  SECURITY.md  cohort_v2_negative_strata_metrics.csv  supplementary_data_1_full_performance_metrics_bootstrap_paired_contrasts.xlsx  supplementary_data_2_runtime_governance_trace_logs.xlsx  supplementary_data_3_prompt_schema_config_freeze_inventory.xlsx  supplementary_data_3_stage_models_thresholds_calibration_missingness.xlsx  supplementary_data_4_cohort_v2_negative_strata_metrics.csv  supplementary_data_4_cohort_v2_negative_strata_metrics.manifest.txt  supplementary_file_1_frozen_prompt_templates_phi_stripped.txt  supplementary_file_2_stage_model_development_freeze_details.txt  supplementary_file_3_safety_governance_runtime_audit_details.txt
pipeline/: README.md  pyproject.toml  requirements.txt
pipeline/artifacts/models/cp3_text/: feature_spec.json  summary.json  summary.md
pipeline/artifacts/models/cp3_text/fold_models/: fold1_weights.npz  fold2_weights.npz  fold3_weights.npz  (+2 more)
pipeline/artifacts/models/lgbm/: README.md
pipeline/artifacts/policy/: best_policy_thresholds.json
pipeline/scripts/: run_external_validation.py  run_pathway.py  run_precomputed_bundle.py  run_qwen_phase1.py  run_xiangya_external_validation.py
pipeline/src/llm_tool_multi_agent/: __init__.py  canonical_engine.py  config.py  curated_evidence.py  deliberation.py  ecg_model.py  evidence_views.py  lgbm_preprocess.py  llm_client.py  pathway_engine.py  precomputed_cohort_v1.py  precomputed_v6.py  prompts.py  quantitative_tools.py  safety_layer.py  schemas.py  single_agent_engine.py
(+39 files in other folders)
